version 0.5.1 - dd-MMM-yyyy
 . Actions: CallFunc retains target (issue #42)
 . Demos: Updated Chipmunks demos (issue #43)
 
version 0.5.0 - 05-Oct-2008
 . Actions: copy protocol fixed on some actions (issue #27)
 . Chipmunk: using newest version from svn (issue #34)
 . CocosNode: Nodes not being dealloced with active actions (issue #25)
 . CocosNode: Doxygen API reference fixed (issue #29)
 . Demo: added test/example of the new Atlas feature (issue #40)
 . Director: Doxygen API reference fixed (issue #29)
 . Director: Display FPS are rendered 10 times per second (issue #37)
 . LabelAtlas: Fast render update Label (issue #36) (*NEW_FEATURE*)
 . MenuItem: sending correct 'self' as argument (issue #19)
 . Misc: improved cocos2d icon and default image (issue #33)
 . TextureAtlas: Object to render indexed vertex arrays from 1 texture (issue #32) (*NEW_FEATURE*)
 . TileMapAtlas: Tile Map renderer (issue #35) (*NEW_FEATURE*)
 . TextureMgr: added removeAllTextures (issue #31)
 . Scheduler: retain arguments (issue #28)
 . Scheduler: passes correct delta time (issue #26)
 . Sprite: replaced xxxFromFile with xxxWithFile (issue #39) (*API_CHANGED*)

version 0.4.3 - 19-Sept-2008
 . Demo: AccelViewPort using code without the VirtualAccelerometer
 . Demo: TransitionDemo shows the 6 new transitions
 . Demo: Updated Icon.png & Default.png files
 . MenuItem: MenuItemFont are 3 pixels heigher.
 . Transitions: all Flip transitions have orientation: Left<->Right, Up<-->Down (6 new transitions)

version 0.4.2 - 10-Sept-2008
 . Action: FadeOut reverse fixed
 . Demo: AnchorDemo using back, restart, forward arrows
 . MenuItem: callback receives the sender as its argument (issue 14)
 . Particles: added initWithTotalParticles method.
 . Transitions: Fixed HUGE memory leak
 . Transitions: Timing fix. Slide transitions don't show "black" space

version 0.4.1 - 08-Sept-2008
 . Actions: commented an NSLog()
 . CocosNode: added removeAll (by Codemattic)