@@ -1,6 +1,8 @@
 version 0.5.1 - dd-MMM-yyyy
  . Actions: CallFunc retains target (issue #42)
  . Demos: Updated Chipmunks demos (issue #43)
+ . Demos: Elasticity fixed in Chipmunk_Accel (issue #45)
+ . MenuItem: supports enable/disable (issue #22)
  
 version 0.5.0 - 05-Oct-2008
  . Actions: copy protocol fixed on some actions (issue #27)
